--- a/src/components/container/Container.css
+++ b/src/components/container/Container.css
@@ -3,7 +3,7 @@ body{
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #c7c7c7;
-    background-color: #36373B;
+    background-color: #36373b;
 }
 
 .rodape{
